feat: added get started
