# swagger.json
@@ -1044,6 +1044,46 @@
         }
       }
     },
+    "/api/Project/completed": {
+      "get": {
+        "tags": [
+          "Project"
+        ],
+        "parameters": [
+          {
+            "name": "projectId",
+            "in": "query",
+            "style": "form",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProjectCompletedDTOAPIResponse"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProjectCompletedDTOAPIResponse"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProjectCompletedDTOAPIResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Project/{projectId}": {
       "get": {
         "tags": [
@@ -1078,46 +1118,6 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ProjectDTOAPIResponse"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Project/completed": {
-      "get": {
-        "tags": [
-          "Project"
-        ],
-        "parameters": [
-          {
-            "name": "projectId",
-            "in": "query",
-            "style": "form",
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProjectCompletedDTOAPIResponse"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProjectCompletedDTOAPIResponse"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProjectCompletedDTOAPIResponse"
                 }
               }
             }
@@ -2284,11 +2284,15 @@
         "format": "int32"
       },
       "LoginResponseDTO": {
+        "required": [
+          "token",
+          "user"
+        ],
         "type": "object",
         "properties": {
           "token": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "user": {
             "$ref": "#/components/schemas/UserDTO"
@@ -3340,20 +3344,25 @@
         "additionalProperties": false
       },
       "UserCreateDTO": {
+        "required": [
+          "email",
+          "password",
+          "username"
+        ],
         "type": "object",
         "properties": {
           "username": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "password": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "email": {
+            "minLength": 1,
             "type": "string",
-            "format": "email",
-            "nullable": true
+            "format": "email"
           }
         },
         "additionalProperties": false
